# RedshiftGtk

./: .gitignore  README.md  com.github.cybre.RedshiftGtk.json  meson.build
data/: com.github.cybre.RedshiftGtk.appdata.xml.in  com.github.cybre.RedshiftGtk.desktop.in  meson.build  redshiftgtk.gresource.xml
data/style/: custom.css
data/ui/: redshiftgtk-window (another copy).ui  redshiftgtk-window (copy).ui  redshiftgtk-window.ui  redshiftgtk-window.ui~
po/: LINGUAS  POTFILES  POTFILES.in  meson.build  redshiftgtk.pot  sr@latin.po
src/: enums.h  main.c  meson.build  redshiftgtk-window.ui~  util.h
src/backend/: meson.build  redshiftgtk-backend.c  redshiftgtk-backend.h  redshiftgtk-redshift-wrapper.c  redshiftgtk-redshift-wrapper.h
src/gui/: meson.build  redshiftgtk-radial-slider.c  redshiftgtk-radial-slider.h  redshiftgtk-window.c  redshiftgtk-window.h
src/tests/: meson.build  test-redshift-wrapper.c
src/tests/data/: redshift.conf
